fixed z-index of filteredout elements

--- a/css/layouts/_footer.scss
+++ b/css/layouts/_footer.scss
@@ -29,6 +29,7 @@
 
     p {
         color: #b6b6b6;
+        font-size: 90%;
         padding: 0 1rem;
 
         @include mq-tablet {
