--- a/css/layouts/_portfolio.scss
+++ b/css/layouts/_portfolio.scss
@@ -49,4 +49,8 @@
             }
         }
     }
+
+    .filteredOut {
+        z-index: -1;
+    }
 }
